[tool.poetry]
name = "mooseherder"
version = "0.0.1"
description = "A python herder for calling MOOSE and gmsh to run parallel parametric sweeps of simulations"
authors = ["Lloyd Fletcher"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
