[tool.poetry]
name = "mooseherder"
version = "0.0.1"
description = "A python herder for calling MOOSE and gmsh to run parallel parametric sweeps of simulations."
authors = [
  { name = "thescepticalrabbit", email = "thescepticalrabbit@gmail.com" },
  { name = "fusmatrs", email = ""},
  { name = "lukethehuman", email = ""},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "netCDF4>=1.6.5"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
