[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mooseherder"
version = "0.1.0"
description = "A herder for calling MOOSE and gmsh to run parallel parametric sweeps of simulations."
authors = [
  { name = "thescepticalrabbit", email = "thescepticalrabbit@gmail.com" },
  { name = "fusmatrs", email = "rory.spencer@ukaea.uk"},
  { name = "lukethehuman", email = "luke.humphrey@ukaea.uk"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "netCDF4>=1.6.5"
]

[project.urls]
"Repository" = "https://github.com/Applied-Materials-Technology/mooseherder"
"Issue Tracker" = "https://github.com/Applied-Materials-Technology/mooseherder/issues"

[tool.setuptools.packages.find]
where = ["src"]